# BatchBook

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  BATCHBOOK_ROADMAP.md  BATCHBOOK_ROADMAP_V2.md  CLAUDE.md  Dockerfile  HANDOVER.md  Makefile  app.py  config.py  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  playwright.config.ts  pyproject.toml
.gitnexus/: meta.json
DTO/: __init__.py  owner_model.py  parent_model.py  student_model.py
alembic/: env.py
clients/: razorpay_client.py  supabase_client.py
core/: config.py
db/: session.py
e2e/: attendance.spec.ts  batch-management.spec.ts  error-handling.spec.ts  fee-management.spec.ts  student-dashboard.spec.ts
models/: __init__.py  attendance_base.py  batch_base.py  batch_teacher_base.py  class_session_base.py  enrollment_base.py  fee_record_base.py  fee_structure_base.py  institute_base.py  owner_base.py  parent_base.py  student_base.py  teacher_base.py  test_score_base.py
repositories/: attendance_repository.py  batch_repository.py  enrollment_repository.py  fee_repository.py  institute_repository.py  owner_repository.py  parent_repository.py  student_repository.py  teacher_repository.py  test_score_repository.py
routes/: attendance_route.py  batch_route.py  enrollment_route.py  fee_route.py  owner_route.py  parent_route.py  student_dashboard_route.py  student_route.py  teacher_route.py  test_score_route.py
scripts/: check_migrations.sh
services/: attendance_service.py  auth_service.py  batch_service.py  enrollment_service.py  fee_service.py  institute_service.py  (+6 more)
(+92 files in other folders)
