[project]
name = "batchbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.0",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.43.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "greenlet>=3.3.2",
    "asyncpg>=0.31.0",
    "loguru>=0.7.3",
    "supabase>=2.28.3",
    "ruff>=0.15.12",
    "pytest-asyncio>=0.25.0",
    "aiosqlite>=0.21.0",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

# Rules to enable
select = [
    "E", "F", "I",     # core lint + imports
    "B",               # bugbear
    "UP",              # pyupgrade
    "N",               # naming
]

# Let formatter handle line length
ignore = ["E501"]

# Auto-fix enabled
fix = true

# Exclude migrations (important for Alembic)
exclude = [
    "migrations",
    "alembic",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
